--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Привет! </h2>
-    <h3></h3>
+    <div>
+            <h2>Привет! </h2>
+            <h3>Добро пожаловать</h3>
+    </div>
+   
 </body>
 </html>
