--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             <h2>Привет! </h2>
             <h3>Добро пожаловать</h3>
     </div>
-   
+<div>
+    <h3>Как дела?</h3>
+</div>
+</div>   
 </body>
 </html>
